src/test/run-pass/use-iface-before-def.rs
// Issue #1761

impl of foo for int { fn foo() -> int { 10 } }
iface foo { fn foo() -> int; }
fn main() {}